found the bug! yayy! It was in MyVisitor